--- a/_data/data.yml
+++ b/_data/data.yml
@@ -54,12 +54,9 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      Systems engineering and data science student interested in learning to 
+      develop software and artificial intelligence, as well as applying geographic 
+      information systems in social and environmental contexts.
 education:
     title: Education
     info:
@@ -80,7 +77,7 @@ experiences:
         time: Feb 2024 - Present
         company: Javeriana University
         details: |
-          Academic Monitor for the Software Analysis and Development course
+          Academic Monitor for the Software Analysis and Development course.
            
 projects:
     title: Projects
@@ -89,7 +86,7 @@ projects:
     assignments:
       - title: Sin Censura
         link: "#hook"
-        tagline: "Interactive mobile application to teach sexual education to young people between 12 and 18 years old"
+        tagline: "Interactive mobile application to teach sexual education to young people between 12 and 18 years old."
 
 
 skills:
