--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,6 +5,16 @@
 # Learn more from ready-to-use templates: https://www.gitpod.io/docs/introduction/getting-started/quickstart
 
 tasks:
-  - init: bundle install
+
+  - name: Iniciar servidor web
+    init: | 
+     bundle install
+     bundle exec jekyll serve
+
+ports:
+  - port: 4000
+    onOpen: open-preview
+
+
 
 
